<resources>
    <string name="app_name" translatable="false">Oceans Polluters</string>

    <string name="home">Home</string>
    <string name="company_name" translatable="false">Oceans \nPolluter Inc.</string>

    <!-- View titles and subtitle -->
    <string name="title_activity_parameters">System</string>
    <string name="title_activity_captain_home">Captain dashboard</string>
    <string name="title_activity_docker_home">Docker dashboard</string>
    <string name="title_activity_logistic_manager_home">Logistics dashboard</string>
    <string name="planning">Planning</string>
    <string name="settings">Settings</string>
    <string name="travel_detail">Travel detail</string>
    <string name="next_ship_departures">Next ship departures</string>

    <!-- Strings related to form -->
    <string name="error_empty_password">Password is empty</string>
    <string name="error_bad_password">Wrong password</string>
    <string name="error_user_not_selected">No user selected</string>
    <string name="password">Password</string>

    <!-- Strings related to ship -->
    <string name="ship">Ship</string>
    <string name="departure_date">Departure date</string>
    <string name="destination_port">Destination port</string>
    <string name="ship_detail">Ship detail</string>
    <string name="general_information">General informations</string>
    <string name="loading_status">Loading status</string>
    <string name="container_loaded">Container loaded</string>
    <string name="total_weight">Total weight</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="ship_details">Ship details</string>
    <string name="add">add</string>
    <string name="ship_edit">Ship edition</string>
    <string name="ship_add">Ship add</string>
    <string name="edit">edit</string>
    <string name="ok">Save</string>
    <string name="max_weight">Max weight (kg)</string>
    <string name="search">Search</string>
    <string name="Containers">Containers</string>
    <string name="container_name">Code</string>
    <string name="container_weight">Weight</string>
    <string name="dock_position">Position</string>
    <string name="content">Content</string>
    <string name="items">Items</string>
    <string name="title_activity_logistic_manager_container_detail">Container detail</string>
    <string name="container_edit">Container edition</string>
    <string name="container_add">Container add</string>
    <string name="error_empty_container">Container code cannot be empty</string>
    <string name="loaded_true">On ship</string>
    <string name="loaded_false">At dock</string>
    <string name="error_empty_dock_position">Dock position cannot be empty</string>
    <string name="delete">Delete</string>
    <string name="sureDeleteShip">Do you really want to delete this ship and all its containers?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="operationFailled">Operation failled, please try again</string>
    <string name="operationSuccess">Operation successfully completed</string>
    <string name="code">Code</string>
    <string name="containerManager">Edit content</string>
    <string name="confirmDisconnect">Disconnect current user?</string>
    <string name="parameters">Parameters</string>
    <string name="about">About</string>
    <string name="app_version">Version</string>
    <string name="version_number">1.1.0</string>
    <string name="authors">Authors</string>
    <string name="app_date">November 2018</string>
    <string name="date_creation">Creation date</string>
    <string name="date">Date</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_types">Product</string>
    <string name="language">Language</string>
    <string name="item_information">Item Information</string>
    <string name="item_type">Product Category</string>
    <string name="item_weight">Weight (kg)</string>
    <string name="item_edit">Edit Item</string>
    <string name="item_add">Add item</string>
    <string name="error_empty_item_weight">Item may not be empty!</string>
    <string name="title_activity_logistic_manager_item_add_edit">Item detail</string>
    <string name="title_activity_logistic_manager_item_detail">Item detail</string>
    <string name="title_activity_logistic_manager_items_detail">Container items</string>
    <string name="spinnerUserSelect">- Select User -</string>
    <string name="langFr">French</string>
    <string name="langEn">English</string>
    <string name="authors_detail" translatable="false"><![CDATA[Pierre Anken & Olivier Gottet]]></string>
    <string name="container_loading_priority">Container loading priority</string>
    <string name="confirmLoaded">Confirm container loaded on ship?</string>
    <string name="container_list">Container list</string>
    <string name="validate">Validate</string>
    <string name="fully_loaded">All containers of this ship are already loaded</string>
    <string name="toast_container_loaded">Container status updated</string>
    <string name="confirm_container_add">Container successfully added</string>
    <string name="confirm_container_save">Container successfully saved</string>
    <string name="error_duplicate_container_name">Container code must be unique</string>
    <string name="sureDeleteContainer">Do you really want to delete this container and its content?</string>
    <string name="sureDeleteItem">Are you sure you want to delete this item?</string>
    <string name="error_weight_empty">Weight cannot be empty</string>
    <string name="error_invalid_date_format">Invalid ship max weight (min 10k)</string>
    <string name="error_empty_ship_name">Ship name cannot be empty</string>
    <string name="error_empty_departure_date">Departure date cannot be empty</string>
    <string name="error_invalid_date_sup_today"><![CDATA[Date must be > today]]></string>
</resources>
