<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.ParameterActivity"
    android:background="@drawable/texture_eau">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="@color/DimGray"
            android:textColor="@color/WhiteSmoke"
            android:text="@string/parameters" />

    <!-- parameters frame -->
    <LinearLayout
        style="@style/border_white_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <!-- Labels headers -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language" />

        </LinearLayout>

        <!-- Label texts -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/DimGray"
        android:text="@string/about"
        android:textAlignment="center"
        android:textColor="@color/WhiteSmoke"
        android:textSize="20sp" />

    <!-- about frame -->
    <LinearLayout
        style="@style/border_white_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <!-- Labels headers -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_version" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authors" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />
        </LinearLayout>

        <!-- Label texts -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authors_detail" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_date" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>