<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.LogisticsManagerContainerAddEditActivity"
    android:background="@drawable/texture_eau"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    // border
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/border_white_style">

        // title general infos
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_information"
            android:textSize="@dimen/title_inside_view"
            android:layout_marginBottom="10dp"/>

        // ship name
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            // ship name label
            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ship"
                />

            // ship name

            <Spinner xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ae_lm_ship_name_spinner"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        // dock position
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            // dock position label
            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dock_position"/>

            // dock position
            <EditText xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ae_lm_dock_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />

        </LinearLayout>

        // container name
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            // container name label
            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/container_name"/>

            // container name
            <EditText xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ae_lm_container_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />

        </LinearLayout>

        // container loaded
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            // loaded status label
            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/container_loaded"/>

            // container loaded toggle button
            <ToggleButton
                android:id="@+id/ae_lm_loaded_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/loaded_true"
                android:textOff="@string/loaded_false"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>