<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_horizontal"
android:orientation="vertical"
tools:context=".ui.CaptainShipViewActivity"
android:background="@drawable/texture_eau"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <!-- border -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/cap_ship_detail"
        style="@style/border_white_style">

        <!--title general infos -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_information"
            android:textSize="@dimen/title_inside_view"
            android:layout_marginBottom="10dp"/>

        <!--ship name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--ship name header -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ship"
                />

            <!--ship name label -->

            <TextView
                android:id="@+id/t_ship_name"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!--destination port -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--destination port header -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/destination_port"/>

            <!--destination port label -->

            <TextView
                android:id="@+id/t_destination_port"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <!--departure date -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--departure date header -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/departure_date"/>

            <!--departure date label -->
            <TextView
                android:id="@+id/t_departure_date"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <!--title loading status -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading_status"
            android:textSize="@dimen/title_inside_view"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <!--container loaded -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--containers status -->
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/container_loaded" />

            <TextView 
                android:id="@+id/t_container_loaded"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--weight status -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--weight label -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_weight" />

            <!-- weight -->
            <TextView
                android:id="@+id/t_total_weight"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>