<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.LogisticManagerHomeActivity"
    android:background="@drawable/texture_eau">

    <TextView
        android:id="@+id/lm_container_items_header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/DimGray"
        android:text="@string/items"
        android:textAlignment="center"
        android:textColor="@color/WhiteSmoke"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        style="@style/border_white_style"
        android:layout_margin="10dp" >

        <!-- item types header -->
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/item_types"
            android:textStyle="bold"
            />

        <!-- item quantity header -->
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_weight="1.6"
            android:layout_height="wrap_content"
            android:text="@string/item_weight"
            android:layout_marginStart="10dp"
            android:textStyle="bold"/>

        <!-- item quantity header -->
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1.5"
            android:text="@string/delete"
            android:textAlignment="viewEnd"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/lmContainersRecyclerView"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" />
</LinearLayout>
